hphp/hack/test/typecheck/class_pointers/equality_refinement.php.exp
ERROR: File "equality_refinement.php", line 27, characters 15-16:
Invalid argument (Typing[4110])
  File "equality_refinement.php", line 18, characters 20-28:
  Expected `class<C1>`
  File "classname.hhi", line 14, characters 27-32:
  But got `string`
ERROR: File "equality_refinement.php", line 32, characters 15-16:
Invalid argument (Typing[4110])
  File "equality_refinement.php", line 20, characters 20-28:
  Expected `class<C2>`
  File "classname.hhi", line 14, characters 27-32:
  But got `string`
